# cmake_notes

./: README.md  docker-compose.yaml
dockerfiles/: Dockerfile
example1/: CMakeLists.txt  base.cpp  demo.cpp  lib.cpp
export-project/: CMakeLists.txt  README.md
export-project/src/: lib1.cpp
modules/: FindFlatbuffers.cmake  FindGflags.cmake  FindGoogleBenchmark.cmake  FindGoogleTest.cmake  FindProtobuf.cmake  README.md
